wp_derive_request_builder/tests/fail/url_not_ident.stderr
error: Expecting key value pairs (url = "", params = FooParam, output = FooOutput, filter_by = FooSparseField)
 --> tests/fail/url_not_ident.rs:3:22
  |
3 |     #[contextual_get("url" = "/users", params = &UserListParams, output = Vec<SparseUser>)]
  |                      ^^^^^
